# rair

./: .Rbuildignore  DESCRIPTION  LICENSE  LICENSE.md  LICENSE.note  NAMESPACE  README.Rmd  README.md  rair.Rproj
R/: addins.R  extendr-wrappers.R  format.R  utils.R
inst/rstudio/: addins.dcf
man/: format.Rd  rair-package.Rd
src/: Makevars.in  Makevars.win.in  entrypoint.c  rair-win.def
src/rust/: Cargo.toml  vendor-config.toml
src/rust/src/: error_handling.rs  lib.rs
tests/: testthat.R
tests/testthat/: test-format.R
